fix https://github.com/IFRCGo/go-frontend/issues/2911 - weirdly jumping key figures on safari

--- a/src/views/EmergencySurge/styles.module.css
+++ b/src/views/EmergencySurge/styles.module.css
@@ -14,7 +14,6 @@
         .key-figure {
             border-radius: var(--go-ui-border-radius-lg);
             box-shadow: var(--go-ui-box-shadow-md);
-            height: 100%;
         }
     }
 }
